# kaggle-isic

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
nbs/: 1__analysis.ipynb  1__eda.ipynb  2__mlp.ipynb  dataset.ipynb  eda.ipynb  fusion.ipynb  mlp.ipynb  qwen.ipynb
scripts/: bench.py  setup-xray.sh  setup.sh
src/isic/: dataset.py  loss.py  metrics.py  models.py  tracing.py  training.py
