[project]
name = "isic"
version = "0.1.0"
description = "https://www.kaggle.com/competitions/isic-2024-challenge"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.14.0",
    "ipywidgets>=8.1.7",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "wandb>=0.20.1",
]
