[project]
name = "isic"
version = "0.1.0"
description = "https://www.kaggle.com/competitions/isic-2024-challenge"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "aws-opentelemetry-distro>=0.12.1",
    "boto3>=1.40.46",
    "datasets[vision]>=4.2.0",
    "h5py>=3.14.0",
    "huggingface-hub>=0.35.3",
    "ipywidgets>=8.1.7",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "pyarrow>=20.0.0",
    "pynvml>=12.0.0",
    "rich>=13.6.0",
    "scikit-learn>=1.7.2",
    "timm>=1.0.15",
    "torch>=2.7.1",
    "torcheval>=0.0.7",
    "torchvision>=0.22.1",
    "trackio>=0.5.0",
    "transformers>=4.57.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pyrefly>=0.29.2", "pytest>=8.4.1", "ruff>=0.12.10", "typer>=0.12.0"]
